package de.dranke.learning.patterns.templatemethod.abstractsuperclass;

/**
 * User: Daniel
 * Date: 16.09.12
 */
public interface CssResource {

}
